[package]
name = "rustytdown"
version = "0.1.0"
edition = "2021"
description = "A YouTube video downloader and converter written in Rust"
authors = ["PandaDEV"]
license = "MIT"
repository = "https://github.com/0pandadev/rustytdown"
keywords = ["youtube", "download", "video", "audio", "converter"]
categories = ["multimedia"]

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["fs", "io-util", "rt", "macros"] }
indicatif = "0.17.9"
bytes = "1.9.0"
thiserror = "2.0.9"

[[bin]]
name = "rustytdown"
path = "src/bin/main.rs"